<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/nav_graph"
    app:startDestination="@id/appListFragment">

    <fragment
        android:id="@+id/appListFragment"
        android:name="com.appcontrolx.ui.AppListFragment"
        android:label="@string/nav_apps" />

    <fragment
        android:id="@+id/toolsFragment"
        android:name="com.appcontrolx.ui.ToolsFragment"
        android:label="@string/nav_tools" />

    <fragment
        android:id="@+id/settingsFragment"
        android:name="com.appcontrolx.ui.SettingsFragment"
        android:label="@string/nav_settings" />

    <fragment
        android:id="@+id/aboutFragment"
        android:name="com.appcontrolx.ui.AboutFragment"
        android:label="@string/nav_about" />

</navigation>
